inzio verifica moduli http

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,18 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    {{ title }}!
+    Welcome to {{ title }}!
   </h1>
 
-  <form [formGroup]="songForm" (ngSubmit)="onSubmit()">
-
-    <select (change)=onChange() [formControl] = "songForm.controls['albumControl']">
-      <option [ngValue]="album" *ngFor="let album of albums"> {{album.title}}</option>
+  <form>
+    <select (change)=onChange($event.target.value)>
+      <option [value]="album.id" *ngFor="let album of albums"> {{album.title}}</option>
     </select> <br>
 
-    titolo: <input [formControl] = "songForm.controls['titleControl']"> <br>
-    durata : <input [formControl] = "songForm.controls['dateControl']"> <br>
-    data pubblicazione: <input type = "date" [formControl] = "songForm.controls['lengthControl']"> <br>
-   <button> Aggiungi </button>
+    titolo: <input #t> <br>
+    durata : <input #l> <br>
+    data pubblicazione: <input type = "date" #d> <br>
+
+    <button (click)= "onClick(t,d,l)"> Prenota </button>
 
   </form>
 
@@ -25,5 +24,7 @@
     {{song.album.title}} : {{song | json}}
    </li>
  </ul> 
+ 
 
+ {{songList | json}}
 
