--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,9 @@
    <li *ngFor="let song of songList">
     {{song.album.title}} : {{song | json}}
    </li>
- </ul> 
- 
+ </ul>
+
 
  {{songList | json}}
 
+CIAO
